; ModuleID = '/home/carl/AnghaBench/linux/drivers/usb/gadget/udc/extr_lpc32xx_udc.c_udc_selep_clrint.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/usb/gadget/udc/extr_lpc32xx_udc.c_udc_selep_clrint.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.lpc32xx_udc = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.lpc32xx_udc*, i32)* @udc_selep_clrint to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @udc_selep_clrint(%struct.lpc32xx_udc* %0, i32 %1) #0 {
  %3 = alloca %struct.lpc32xx_udc*, align 8
  %4 = alloca i32, align 4
  store %struct.lpc32xx_udc* %0, %struct.lpc32xx_udc** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.lpc32xx_udc*, %struct.lpc32xx_udc** %3, align 8
  %6 = load i32, i32* %4, align 4
  %7 = call i32 @CMD_SEL_EP_CLRI(i32 %6)
  %8 = call i32 @udc_protocol_cmd_w(%struct.lpc32xx_udc* %5, i32 %7)
  %9 = load %struct.lpc32xx_udc*, %struct.lpc32xx_udc** %3, align 8
  %10 = load i32, i32* %4, align 4
  %11 = call i32 @DAT_SEL_EP_CLRI(i32 %10)
  %12 = call i32 @udc_protocol_cmd_r(%struct.lpc32xx_udc* %9, i32 %11)
  ret i32 %12
}

declare dso_local i32 @udc_protocol_cmd_w(%struct.lpc32xx_udc*, i32) #1

declare dso_local i32 @CMD_SEL_EP_CLRI(i32) #1

declare dso_local i32 @udc_protocol_cmd_r(%struct.lpc32xx_udc*, i32) #1

declare dso_local i32 @DAT_SEL_EP_CLRI(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
